# mccode-antlr

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: pip.yml  wheels.yml
mccode/: __init__.py  commands.py  libc-registry.txt  mcstas-registry.txt  mcstas.py  mcxtrace-registry.txt
mccode/assembler/: assembler.py
mccode/common/: __init__.py  block.py  expression.py  metadata.py  parameters.py  textwrap.py  utilities.py
mccode/comp/: __init__.py  comp.py  visitor.py
mccode/compiler/: c.py
mccode/config/: __init__.py  config_platforms.yaml  platforms.yaml
mccode/grammar/: C.g4  CLexer.py  CListener.py  CParser.py  CVisitor.py  McCommon.g4  McComp.g4  McCompLexer.py  McCompListener.py  McCompParser.py  McCompVisitor.py  McInstr.g4  McInstrLexer.py  McInstrListener.py  McInstrParser.py  McInstrVisitor.py  __init__.py  builder.py  cpp.g4
mccode/instance/: __init__.py  instance.py  orientation.py
mccode/instr/: __init__.py  group.py  instance.py  instr.py  jump.py  orientation.py  visitor.py
mccode/libraries/c/: literals-r.c  opencl-lib.h
mccode/loader/: __init__.py  datfile.py  loader.py  simfile.py
mccode/reader/: __init__.py  reader.py  readers.py  registry.py
mccode/translators/: c.py  c_comp.py  c_decls.py  c_defines.py  c_display.py  c_finally.py  c_header.py  c_initialise.py  c_listener.py  c_macros.py  c_raytrace.py  c_save.py  c_section.py  c_trace.py  target.py
mccode_antlr/: __init__.py  commands.py  libc-registry.txt
mccode_antlr/assembler/: __init__.py  assembler.py
mccode_antlr/common/: __init__.py  block.py  expression.py  metadata.py  mode.py  parameters.py
mccode_antlr/comp/: visitor.py
mccode_antlr/compiler/: c.py
mccode_antlr/config/: __init__.py  config_default.yaml  platforms.yaml
mccode_antlr/grammar/: CLexer.py  CListener.py  CParser.py  CVisitor.py  McCommon.g4  McCompLexer.py  McCompListener.py  McCompParser.py  McCompVisitor.py  McInstrLexer.py  McInstrListener.py  McInstrParser.py  McInstrVisitor.py  README.md  __init__.py  __main__.py  builder.py
mccode_antlr/instr/: group.py  instance.py  instr.py  orientation.py  visitor.py
mccode_antlr/io/: __init__.py  hdf5.py  json.py
mccode_antlr/libraries/c/: mccode-r.h
mccode_antlr/loader/: datfile.py  loader.py  simfile.py
mccode_antlr/reader/: __init__.py  reader.py  registry.py
mccode_antlr/run/: __init__.py  range.py  runner.py
mccode_antlr/translators/: c.py  c_decls.py  c_display.py  c_finally.py  c_header.py  c_initialise.py  c_listener.py  c_macros.py  c_raytrace.py  c_save.py  c_trace.py  target.py
nightly/: mccode_test.py
src/grammar/: C99.g4  McCommon.g4  McComp.g4  McDisplay.g4  McInstr.g4  README.md  builder.py  c99.g4
src/grammar/Cpp/: McCompBaseVisitor.cpp  McCompBaseVisitor.h  McCompLexer.cpp  McCompLexer.h  McCompParser.cpp  McCompParser.h  McCompVisitor.cpp  McCompVisitor.h  McInstrBaseVisitor.cpp  McInstrBaseVisitor.h  McInstrLexer.cpp  McInstrLexer.h  McInstrParser.cpp  McInstrParser.h  McInstrVisitor.cpp  McInstrVisitor.h  sa_mccomp_cpp_parser.cpp  sa_mccomp_translator.cpp  sa_mccomp_translator.h  sa_mcinstr_cpp_parser.cpp  sa_mcinstr_translator.cpp  sa_mcinstr_translator.h
src/grammar/Python3/: CLexer.py  CListener.py  CParser.py  McCompLexer.py  McInstrLexer.py  McInstrParser.py  sa_mccomp.py  sa_mcinstr.py
src/mccode_antlr/: version.py
src/mccode_antlr/assembler/: assembler.py
src/mccode_antlr/cli/: commands.py  management.py
src/mccode_antlr/common/: __init__.py  block.py  expression.py  parameters.py  textwrap.py  utilities.py  visitor.py
test/: compiled.py  mccode_test.py  splitRunTest.c  test_c_runtime.py  test_component_vector_parameter.py  test_expression.py  test_extend.py  test_extract.py  test_instr.py  test_io.py  test_orientation.py
tests/: test_c_type_declaration.py  test_component_vector_parameter.py  test_expression.py  test_extract.py  test_instr.py  test_metadata.py  test_orientation.py  test_registry.py
tests/c_runtime/: compiled.py
tests/instr/: test_copy.py  test_empty_trace.py  test_hdf5_comp_reference.py  test_instance_parameters.py  test_parameters.py  test_positioning.py  test_split.py  utils.py
tests/runtime/: compiled.py  test_c_runtime.py  test_examples.py  test_instr.py  test_mcxtrace.py  test_nexus.py  test_parameters.py  test_raytrace.py  test_when.py
(+47 files in other folders)
